--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
     "debug.allowBreakpointsEverywhere": true,
-    "files.autoGuessEncoding": true,
-    "liveServer.settings.port": 5501
+    "files.autoGuessEncoding": true
 }
